--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -109,6 +109,15 @@ vich_uploader:
             delete_on_update:   true
             delete_on_remove:   true
 
+        partenaire_image:
+            uri_prefix:         /uploads/partenaires
+            upload_destination: '%kernel.root_dir%/../web/uploads/partenaires'
+            namer: vich_uploader.namer_uniqid
+
+            inject_on_load:     false
+            delete_on_update:   true
+            delete_on_remove:   true
+
 liip_imagine:
     resolvers:
         default:
