--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,6 +118,15 @@ vich_uploader:
             delete_on_update:   true
             delete_on_remove:   true
 
+        bien_image:
+            uri_prefix:         /uploads/biens
+            upload_destination: '%kernel.root_dir%/../web/uploads/biens'
+            namer: vich_uploader.namer_uniqid
+
+            inject_on_load:     false
+            delete_on_update:   true
+            delete_on_remove:   true
+
 liip_imagine:
     resolvers:
         default:
