--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -127,6 +127,15 @@ vich_uploader:
             delete_on_update:   true
             delete_on_remove:   true
 
+        slide_image:
+            uri_prefix:         /uploads/slides
+            upload_destination: '%kernel.root_dir%/../web/uploads/slides'
+            namer: vich_uploader.namer_uniqid
+
+            inject_on_load:     false
+            delete_on_update:   true
+            delete_on_remove:   true
+
 liip_imagine:
     resolvers:
         default:
