--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -136,6 +136,15 @@ vich_uploader:
             delete_on_update:   true
             delete_on_remove:   true
 
+        produit_image:
+            uri_prefix:         /uploads/produits
+            upload_destination: '%kernel.root_dir%/../web/uploads/produits'
+            namer: vich_uploader.namer_uniqid
+
+            inject_on_load:     false
+            delete_on_update:   true
+            delete_on_remove:   true
+
 liip_imagine:
     resolvers:
         default:
